--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "bugs": {
     "url": "https://github.com/girardinsamuel/website/issues"
   },
-  "homepage": "https://github.com/girardinsamuel/website#readme"
+  "homepage": "https://github.com/girardinsamuel/website#readme",
+  "dependencies": {
+    "autoprefixer": "^10.2.3",
+    "postcss": "^8.2.4",
+    "tailwindcss": "^2.0.2"
+  }
 }
